# homelab

./: .gitignore  README.md  post_create.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ansible_push.yml  push.yml  rust_push.yml
.github/workspace/: push.yml
ansible/: .yamllint  README.md  ansible.cfg  requirements.yml
ansible/inventory/: default_opnsense  default_pfSense  hosts.ini
ansible/playbooks/: container_config.yaml  main.yaml  test.yaml  vagrant_test.yaml
ansible/roles/configure_networking/: README.md
ansible/roles/configure_networking/defaults/: main.yml
ansible/roles/configure_networking/handlers/: main.yml
ansible/roles/configure_networking/tasks/: main.yml
ansible/roles/configure_networking/tests/: test.yml
ansible/roles/configure_networking/vars/: main.yml
ansible/roles/configure_ssh/defaults/: main.yml
ansible/roles/configure_ssh/handlers/: main.yml
ansible/roles/configure_ssh/tasks/: 00-main.yml
ansible/roles/container_config/defaults/: main.yml
ansible/roles/container_config/files/: config.j2  credentials.j2
ansible/roles/container_config/handlers/: main.yml
ansible/roles/container_config/tasks/: main.yml
ansible/roles/container_config/tests/: test.yml
ansible/roles/container_config/vars/: main.yml
ansible/roles/default_pf_sense/tasks/: main.yml
ansible/roles/file_share/defaults/: main.yml
ansible/roles/file_share/handlers/: main.yml
ansible/roles/file_share/meta/: main.yml
ansible/roles/file_share/tasks/: main.yml
ansible/roles/file_share/tests/: test.yml
ansible/roles/file_share/vars/: main.yml
ansible/roles/free_bsd_security/defaults/: main.yml
ansible/roles/free_bsd_security/handlers/: main.yml
ansible/roles/general_config/: README.md
ansible/vars/: aws.yml  main.yml  ssh_vars.yaml  vpn.yml
config/opnsense/: README.md
config/opnsense/conf/: base_config.xml  personal_config.xml
config/pfSense/: README.md  base-pfsense-config.xml
docs/: Hardware.md  Network.md  README.md
docs/guides/: pfSense_VLAN_setup.md
initialize_ssh/: Cargo.toml
initialize_ssh/src/: ansible.rs  main.rs  ssh_key.rs
terraform/: main.tf
(+33 files in other folders)
