[package]
name = "initialize_ssh"
authors = ["Vinay Yuvashankar <vinay.yuvashankar@gmail.com>"]
description = """
A CLI helper program that creates an ssh key if not avaliable, 
and stores them as an ansible-vault file. 
Store your password in a vault file in $HOME/.vault_pass.txt, 
and run initialize_ssh to create and vault a file. 
If a vault file is already present, 
initialize_ssh wil unvault and store the ssh keys.
"""
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
home = "^0.5"
log = { version = "^0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rpassword = "^7.2"
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
env_logger = "^0.10"

[dev-dependencies]
tempfile = "^3.8"
serial_test = "^2.0"
